--- a/Air/Air.vcxproj
+++ b/Air/Air.vcxproj
@@ -168,6 +168,10 @@
     </ClCompile>
     <ClCompile Include="Program.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="tempdata2.csv" />
+    <None Include="test.csv" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
