--- a/Air/Air.vcxproj.filters
+++ b/Air/Air.vcxproj.filters
@@ -45,4 +45,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="test.csv" />
+    <None Include="tempdata2.csv" />
+  </ItemGroup>
 </Project>
