--- a/Air/Air.vcxproj.filters
+++ b/Air/Air.vcxproj.filters
@@ -48,5 +48,6 @@
   <ItemGroup>
     <None Include="test.csv" />
     <None Include="tempdata2.csv" />
+    <None Include="tempdata4.csv" />
   </ItemGroup>
 </Project>
