--- a/Air/Air.vcxproj
+++ b/Air/Air.vcxproj
@@ -170,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="tempdata2.csv" />
+    <None Include="tempdata4.csv" />
     <None Include="test.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
